# routes/api.php
@@ -28,6 +28,7 @@ Route::group(['middleware' => 'api', 'prefix' => 'auth'], function () {
 
 Route::middleware('auth:sanctum')->group(function () {
 
-    Route::apiResource('properties', ProductPropertyController::class);
+
 });
 Route::apiResource('products', ProductController::class)->middleware('jwt.auth');
+Route::apiResource('properties', ProductPropertyController::class)->middleware('jwt.auth');
